[gd_scene load_steps=6 format=2]

[ext_resource path="res://main_menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://unit/textures/Poppins-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://unit/sounds/Minimalist4.mp3" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=2]
size = 128
outline_size = 12
outline_color = Color( 1, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VB" type="VBoxContainer" parent="CenterContainer"]
margin_left = 270.0
margin_top = 330.0
margin_right = 1650.0
margin_bottom = 750.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="CenterContainer/VB"]
margin_right = 1380.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
custom_fonts/font = SubResource( 2 )
text = "STEEL-CHALK-ASSET"
align = 1
valign = 1

[node name="PlayButton" type="Button" parent="CenterContainer/VB"]
margin_left = 440.0
margin_top = 210.0
margin_right = 940.0
margin_bottom = 310.0
rect_min_size = Vector2( 500, 100 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "PLAY"

[node name="ExitButton" type="Button" parent="CenterContainer/VB"]
margin_left = 440.0
margin_top = 320.0
margin_right = 940.0
margin_bottom = 420.0
rect_min_size = Vector2( 500, 100 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "EXIT"

[node name="UISound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
pitch_scale = 1.51

[connection signal="focus_entered" from="CenterContainer/VB/PlayButton" to="." method="_on_PlayButton_focus_entered"]
[connection signal="mouse_entered" from="CenterContainer/VB/PlayButton" to="." method="_on_PlayButton_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VB/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="focus_entered" from="CenterContainer/VB/ExitButton" to="." method="_on_ExitButton_focus_entered"]
[connection signal="mouse_entered" from="CenterContainer/VB/ExitButton" to="." method="_on_ExitButton_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VB/ExitButton" to="." method="_on_ExitButton_pressed"]
